@@ -25,6 +25,17 @@ void void_tand0(char x)
   char y = (identity(x) & 0) ? 42 : 43;
 }
 
+void void_txor1(char x)
+{
+  char y = (identity(x) ^ 1) ? 42 : 43;
+}
+
+void void_txor0(char x)
+{
+  char y = (identity(x) ^ 0) ? 42 : 43;
+}
+
+
 /*
  * function genOr() in z80/gen.c
  *   assumed identity of "or a, literal" and "or a,a"
@@ -52,6 +63,18 @@ char tand1(char x)
 char tand0(char x)
 {
   char y = (identity(x) & 0) ? 42 : 43;
+  return y;
+}
+
+char txor1(char x)
+{
+  char y = (identity(x) ^ 1) ? 42 : 43;
+  return y;
+}
+
+char txor0(char x)
+{
+  char y = (identity(x) ^ 0) ? 42 : 43;
   return y;
 }
 
@@ -84,6 +107,8 @@ testBug(void)
   void_tand1(0);
   void_tand0(1);
   void_tand0(0);
+  void_txor1(1);
+  void_txor0(0);
 
   ASSERT(tor1(1)  == 42);
   ASSERT(tor1(0)  == 42);
@@ -93,6 +118,10 @@ testBug(void)
   ASSERT(tand1(0) == 43);
   ASSERT(tand0(1) == 43);
   ASSERT(tand0(0) == 43);
+  ASSERT(txor1(1) == 43);
+  ASSERT(txor1(0) == 42);
+  ASSERT(txor0(1) == 42);
+  ASSERT(txor0(0) == 43);
 
   void_tor1(1);
   void_tor1(0);
