@@ -1,4 +1,12 @@
 2010-05-21 Philipp Klaus Krause <pkk AT spth.de>
+	* src/mcs51/gen.c,
+	  src/z80/gen.c,
+	  src/hc08/gen.c,
+	  src/ds390/gen.c,
+	  support/regression/tests/bug1875933.c:
+	  Completed fix for #1875933 applying #2892763.
+
+2010-05-21 Philipp Klaus Krause <pkk AT spth.de>
 	* src/SDCCopt.c,
 	  src/z80/gen.c,
 	  support/regression/tests/memory.c:
